fixes research spacing

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -249,3 +249,7 @@ p.research-date {
     margin-top: 10px;
     font-weight: normal;
 }
+
+.paper {
+    max-width: 20%;
+}
